# markwright

./: .gitignore  CLAUDE.md  NOTICE  README.md  justfile  mkdocs.yml  plan.md  pyproject.toml  spec.md  todo.md
.ai-sessions/: lessons.md  session-20260626-1704-highlight-coverage-gap.md  session-20260626-1717-untrack-coverage.md  session-20260626-2008-readme-and-writing-style.md  session-20260626-2036-title-case-headings.md  session-20260627-2036-rename-to-markwright.md  session-20260627-2341-spec-brainstorm-and-plan.md  session-20260628-0000-goal-step-1-simple-embed-stages.md  session-20260628-0024-goal-step-4-highlight-stages.md  session-20260628-0044-goal-step-7-cli-post.md  session-20260628-0050-goal-step-8-cli-pre.md  session-20260628-0055-goal-step-9-cli-render.md  session-20260628-0102-goal-step-10-roundtrip.md  session-20260628-0114-goal-step-12-packaging.md  session-20260628-1028-fence-registry-branch-tests.md  session-20260628-1032-harden-coverage-gate.md  session-20260628-2149-refresh-claude-md.md
.ai-sessions/v1-init/: plan.md  todo.md
.github/workflows/: ci.yml
docs/: demo.md  index.md  using-with-mkdocs.md
docs/extensions/: codepen.md  fence.md  highlight.md  image-compare.md  instagram.md  slideshow.md  twitter.md  youtube.md
docs/stylesheets/: extra.css
src/markwright/: _util.py  cli.py  codepen.py  (+7 more)
tests/: conftest.py  test_cli.py  test_codepen.py  test_fence.py  test_highlight.py  test_image_compare.py  test_instagram.py  test_packaging.py  test_registry.py  test_roundtrip.py  test_slideshow.py  test_smoke.py  test_twitter.py  test_youtube.py
